crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_basic_positive_no_length.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| string |",
        "+--------+",
    ],
)
