crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_binary_to_binary_basic.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(to_binary('hello world'), 2, 5) as result\""
---
Ok(
    [
        "+------------+",
        "| result     |",
        "+------------+",
        "| 656c6c6f20 |",
        "+------------+",
    ],
)
