crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_binary_to_binary_emoji.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(to_binary('test🚀data'), 5, 4) as result\""
---
Ok(
    [
        "+----------+",
        "| result   |",
        "+----------+",
        "| f09f9a80 |",
        "+----------+",
    ],
)
