crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_binary_to_binary_empty.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(to_binary(''), 1, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "|        |",
        "+--------+",
    ],
)
