crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_binary_to_binary_mixed.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(to_binary('café☕test'), 4, 5) as result\""
---
Ok(
    [
        "+------------+",
        "| result     |",
        "+------------+",
        "| c3a9e29895 |",
        "+------------+",
    ],
)
