crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_binary_to_binary_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(to_binary('hello world'), -5, 4) as result\""
---
Ok(
    [
        "+----------+",
        "| result   |",
        "+----------+",
        "| 776f726c |",
        "+----------+",
    ],
)
