crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_decimal_positive.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(123.456, 3, 4) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 3.45   |",
        "+--------+",
    ],
)
